adjusted styling to fix alignment and content fit

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,6 +7,7 @@
 
 .icons_wrapper {
   display: flex;
+  height: fit-content;
   gap: 5px;
 }
 
@@ -17,6 +18,7 @@
 
 .row_wrapper {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
